--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,26 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-      http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-    KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
     <head>
-        <link rel="stylesheet" type="text/css" href="guacamole.css"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/guacamole.css}"/>
         <title>Guacamole (EXAMPLE)</title>
     </head>
 
@@ -31,7 +13,7 @@
 
         <!-- Guacamole JavaScript API -->
         <script type="text/javascript"
-            src="guacamole-common-js/all.min.js"></script>
+            th:src="@{/guacamole-common-js/all.min.js}"></script>
 
         <!-- Init -->
         <script type="text/javascript"> /* <![CDATA[ */
