--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 
             // Instantiate client, using an HTTP tunnel for communications.
             var guac = new Guacamole.Client(
-                new Guacamole.HTTPTunnel("tunnel")
+                new Guacamole.HTTPTunnel("/tunnel")
             );
 
             // Add client to display div
