--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,69 +1,51 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
     <head>
         <link rel="stylesheet" type="text/css" th:href="@{/guacamole.css}"/>
-        <title>Guacamole (EXAMPLE)</title>
+        <title>My Guacamole</title>
     </head>
-
     <body>
-
         <!-- Display -->
         <div id="display"></div>
-
         <!-- Guacamole JavaScript API -->
-        <script type="text/javascript"
-            th:src="@{/guacamole-common-js/all.min.js}"></script>
-
+        <script type="text/javascript" th:src="@{/guacamole-common-js/all.min.js}"></script>
         <!-- Init -->
-        <script type="text/javascript"> /* <![CDATA[ */
-
+        <script type="text/javascript">
+            /* <![CDATA[ */
             // Get display div from document
-            var display = document.getElementById("display");
-
+            let display = document.getElementById("display");
             // Instantiate client, using an HTTP tunnel for communications.
-            var guac = new Guacamole.Client(
+            let guac = new Guacamole.Client(
                 new Guacamole.HTTPTunnel("/tunnel")
             );
-
             // Add client to display div
             display.appendChild(guac.getDisplay().getElement());
-            
             // Error handler
             guac.onerror = function(error) {
                 alert(error);
             };
-
             // Connect
             guac.connect();
-
             // Disconnect on close
             window.onunload = function() {
                 guac.disconnect();
             }
-
             // Mouse
-            var mouse = new Guacamole.Mouse(guac.getDisplay().getElement());
-
+            let mouse = new Guacamole.Mouse(guac.getDisplay().getElement());
             mouse.onmousedown = 
             mouse.onmouseup   =
             mouse.onmousemove = function(mouseState) {
                 guac.sendMouseState(mouseState);
             };
-
             // Keyboard
-            var keyboard = new Guacamole.Keyboard(document);
-
+            let keyboard = new Guacamole.Keyboard(document);
             keyboard.onkeydown = function (keysym) {
                 guac.sendKeyEvent(1, keysym);
             };
-
             keyboard.onkeyup = function (keysym) {
                 guac.sendKeyEvent(0, keysym);
             };
-
-        /* ]]> */ </script>
-
+            /* ]]> */
+        </script>
     </body>
-
 </html>
